...
    <string name="hint_password">Password</string>
    <string name="hint_passwordAR">كلمة المرور</string>
    <string name="hint_name">Fullname</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_loginAR">تسجيل الدخول</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_registerAR">تسجيل</string>

    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_registerAR">انشاء حساب جديد.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_link_to_loginAR"> لدي حساب اذهب الى تسجيل الدخول.</string>



...
