...
            android:textColor="@color/btn_login" />


        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dip"
            android:background="@null"
            android:text="@string/btn_link_to_registerAR"
            android:textAllCaps="false"
...
