...
                    android:id="@+id/newGameButton"/>

                <Button
                    android:text="@string/PlayersList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_gamesAR"
                    android:id="@+id/savedGamesButton" />
...
